# moai-study

./: CLAUDE.md
moai-study/: README.md  pyproject.toml
moai-study/.claude/hooks/moai/: handle-agent-hook.sh  handle-notification.sh  handle-permission-request.sh  handle-post-tool-failure.sh  handle-post-tool.sh  handle-session-end.sh  handle-stop.sh  handle-subagent-start.sh  handle-subagent-stop.sh  handle-task-completed.sh  handle-worktree-create.sh
moai-study/.moai/: manifest.json
moai-study/.moai/config/sections/: git-strategy.yaml
moai-study/docs/: PLAN-dashboard.md
moai-study/src/claude_conversation_kg/: __init__.py  cli.py  config.py  exceptions.py  nlq.py  pipeline.py
moai-study/src/claude_conversation_kg/dashboard/: server.py
moai-study/src/claude_conversation_kg/extractor/: __init__.py  client.py  models.py  processor.py  prompts.py
moai-study/src/claude_conversation_kg/graph/: connection.py  queries.py  schema.py  store.py
moai-study/src/claude_conversation_kg/parser/: __init__.py  models.py  (+2 more)
moai-study/tests/: conftest.py  test_cli.py  test_cli_dashboard.py  test_config.py  test_dashboard_server.py  test_exceptions.py  test_nlq.py  test_pipeline.py
moai-study/tests/fixtures/: sample_conversation.jsonl
moai-study/tests/test_extractor/: test_client.py  test_models.py  test_processor.py  test_prompts.py
moai-study/tests/test_graph/: test_connection.py  test_queries.py  test_schema.py  test_store.py
moai-study/tests/test_parser/: test_models.py  test_reader.py  test_transformer.py
moai-study/tests/test_visualization/: test_renderer.py
(+24 files in other folders)
