[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-conversation-kg"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "kuzu>=0.8.0",
    "anthropic>=0.40.0",
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "pyvis>=0.3.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.0",
]

[project.scripts]
kg = "claude_conversation_kg.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_conversation_kg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=claude_conversation_kg --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
    "httpx>=0.27.0",
]
